# perl-tree-sitter-lsp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  cpanfile  dev.sh  run_e2e.sh  sner.pl  test_e2e.lua  test_e2e_array_hop.lua  test_e2e_branded_apps.lua  test_e2e_branded_minion.lua  test_e2e_cross_file.lua  test_e2e_dbic_parametric.lua  test_e2e_frameworks.lua  test_e2e_inheritance.lua  test_e2e_mojo_events.lua  test_e2e_mojo_plugins.lua  test_e2e_roles.lua  test_e2e_types.lua  test_nvim_init.lua
.claude/: settings.local.json
.github/workflows/: ci.yml  identity-bootstrap.yml  publish-extension.yml  release.yml
bench/: gen_corpus.py
demo/: README.md  app.pl  asciinema_drive.sh  demo_init.lua  perl-lsp.cast  perl-lsp.webm  verify.lua
demo/lib/: Account.pm  Bank.pm
docs/: PLUGIN_AUTHORING.md  ROADMAP.md  arch-review-2026-06.md  cpanfile-indexing-plan.md  cpp-golive-map.md  cpp-lsp-experience-research.md  cpp-qa-log.md  cpp-qa-scout-findings.md  cpp-stdlib-autoconfig-research.md  d4-review-followups.md  eval-salsa-incremental.md  future-pod-ast-parser.md  gold-roadmap.md  macro-semantic-map.md  open-problems.md  parser-error-recovery-gaps.md  parser-shortcomings.md  prompt-accessor-arity.md  prompt-app-entity.md  prompt-cleanups.md  prompt-cli-tools.md  prompt-config-schema.md  prompt-constant-folding.md  prompt-cpp-cross-file.md  prompt-cpp-member-refs.md  prompt-cpp-reparse.md  prompt-cross-file-function-metadata.md  prompt-cross-file-gaps.md  prompt-cross-file-invocant-refresh.md  prompt-cross-file-return-types.md  prompt-dbic-as-plugin.md  prompt-domain-typing.md  prompt-enrichment-inheritance-residual.md  prompt-entrypoint-analysis.md  prompt-error-recovery.md  prompt-expression-propagation.md  prompt-field-projections.md  prompt-flow-narrowing.md  prompt-forward-reference-resolution.md  prompt-framework-accessors.md  (+57 more)
docs/adr/: branded-edges.md  cursor-context-completion.md  error-recovery.md  field-projections.md  file-store-and-resolve.md  flow-narrowing.md  graph-walking.md  importbase-plugin-gen.md  macro-handling.md  narrowing-diagnostics.md  optional-types.md  parametric-types.md  plugin-system.md  pod-rendering.md  receiver-gated-dispatch.md  return-expr.md  role-contracts.md  route-branding.md  stack-graphs-evaluation.md  structural-shapes.md  type-constraints.md
docs/gold-corpus/: README.md  definition.md  diagnostics.md  references.md  semantic-tokens.md  type-at.md
e2e/: core.lua  cpp.lua  cpp_locals.lua  cpp_macro_calls.lua  cpp_member_op.lua  cpp_members.lua  init_cpp.lua  init_python.lua  python_members.lua  run-cpp.sh
editors/claude-code/: .lsp.json  README.md
editors/mason/: package.yaml
editors/nvim-lspconfig/: perl_lsp.lua
editors/vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
examples/: README.md  edge_facts_spike.rs
examples/cpp/: macro_reparse.cpp
examples/perl/: prototypes.pl
frameworks/: catalyst.rhai  dancer.rhai  data-printer.rhai  dbic.rhai  minion.rhai  mojo-events.rhai  mojo-helpers.rhai  mojo-lite.rhai  mojo-routes.rhai  moo.rhai  type-tiny.rhai
gold-corpus/: KNOWN-GAPS.md  README.md  completion.md  document-highlight.md  hover.md  linked-editing.md  outline.md  rename.md  run.pl  semantic-tokens.md  signature-help.md  type-at.md  workspace-symbol.md
gold-corpus/cpp-fixture/: bitfield_field.cpp  c3.cpp  cenum.c  cfgvar_macro_field.cpp  chain.cpp  cparam.c  cstruct.c  domain_enum.c  inc_nav.cpp  incdep.h  inh.cpp  macro_field_type.cpp  macro_refs.h  marker_macro_outline.cpp  member_block.cpp  outline.json  outofline.cpp  sample.cpp  struct_refs.cpp  typedef_struct_member.cpp
gold-corpus/fixtures/: c-enum.json  c-param-completion.json  c-typedef-completion.json  c-typedef.json  completion.json  cpp-completion.json  cpp-definition.json  cpp-hover.json  cpp-known-gaps.json  cpp-outline.json  cpp-references.json  definition.json  diagnostics.json  document-highlight.json  hover.json  implementations.json  linked-editing.json  longdist-diagnostics.json  longdist-hover.json  nested-definition.json  nested-diagnostics.json  nested-hover.json  nested-references.json  nested-typeat.json  outline.json  references.json  (+5 more)
perl-gen/: README.md
scripts/: bump-version.sh
src/: analysis.rs  backend.rs  builder.rs  builder_tests.rs  builtins_pod.rs  builtins_pod_tests.rs  c_preproc.rs  c_preproc_tests.rs  c_reparse.rs  c_reparse_tests.rs  c_superpose.rs  c_superpose_tests.rs  call_ref_index_tests.rs  conventions.rs  cpanfile.rs  cpp_macro_model.rs  cpp_macro_model_tests.rs  cpp_multidispatch.rs  cpp_multidispatch_tests.rs  cpp_reparse.rs  cpp_reparse_tests.rs  cpp_templates.rs  cpp_toolchain.rs  cpp_toolchain_tests.rs  cpp_typedef_alias_tests.rs  cst.rs  cursor_context.rs  cursor_context_tests.rs  cursor_sentinel.rs  cursor_sentinel_tests.rs  document.rs  document_incremental_pkg_test.rs  document_tests.rs  file_analysis.rs  file_analysis_tests.rs  file_store.rs  generators.rs  graph.rs  graph_tests.rs  heatmap.html  (+30 more)
test_files/: branded_app_one.pl  branded_app_two.pl  branded_minion.pl  cross_file_types.pl  dbic_parametric_demo.pl  frameworks.pl  inheritance.pl  narrowing_playground.pl  oop_playground.pl  phase5_demo.pl  plugin_catalyst_demo.pl  plugin_events_consumer.pl  plugin_events_demo.pl  plugin_minion_demo.pl  plugin_mojo_demo.pl  qa_def_coverage.pl  sample.pl  type_obstacle_course.pl
tests/: bridged_route_invocant.rs  cli_positions.rs  heatmap.rs
(+74 files in other folders)
