[package]
name = "perl-lsp"
version = "0.5.2"
edition = "2021"
authors = ["tree-sitter-perl contributors"]
license = "Artistic-2.0"
description = "A fast Perl language server with cross-file type inference, completion, goto-definition, and rename. Built on tree-sitter-perl and tower-lsp."
repository = "https://github.com/tree-sitter-perl/perl-lsp"
keywords = ["perl", "lsp", "tree-sitter", "language-server"]
categories = ["development-tools", "text-editors"]

[[bin]]
name = "perl-lsp"
path = "src/main.rs"

[features]
default = []
# Compile the workspace-scale `refs_to` perf bench
# (`bench_refs_to_invocant_resolution`). Off by default so the
# regular `cargo test` doesn't carry a long-running synthetic
# workload — and so we never ship `#[ignore]`d tests as
# perpetual yellow output. Run with:
#   cargo test --release --features perf_bench bench_refs_to
perf_bench = []
# Salsa incremental-computation evaluation spike (`--salsa-bench <root>`).
# Off by default; pulls in the `salsa` crate only when evaluating the
# incremental-framework migration. See docs/eval-salsa-incremental.md.
salsa_bench = ["dep:salsa"]

[dependencies]
salsa = { version = "0.27", optional = true }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.25"
ts-parser-perl = "1.1.3"
ts-parser-pod = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
zstd = "0.13"
bitflags = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1"
ignore = "0.4"
log = "0.4"
env_logger = "0.11"
rhai = { version = "1.23", features = ["sync", "serde"] }
