[package]
name = "perl-lsp"
version = "0.5.3"
edition = "2021"
authors = ["tree-sitter-perl contributors"]
license = "MIT"
description = "A fast Perl language server with cross-file type inference, completion, goto-definition, and rename. Built on tree-sitter-perl and tower-lsp."
repository = "https://github.com/tree-sitter-perl/perl-lsp"
keywords = ["perl", "lsp", "tree-sitter", "language-server"]
categories = ["development-tools", "text-editors"]

[[bin]]
name = "perl-lsp"
path = "src/main.rs"

[features]
default = []
# Pack-language drivers, opt-in. Perl is always built (the reference
# driver + the gold-corpus regression net). A `cpp-lsp` distribution is
# `--features cpp`; the grammar is a runtime dep only under its feature,
# so the default Perl build never links it.
cpp = ["dep:tree-sitter-cpp"]
python = ["dep:tree-sitter-python"]
r = ["dep:tree-sitter-r"]
cmake = ["dep:tree-sitter-cmake"]
# All pack languages — a maximal multi-language build.
all-langs = ["cpp", "python", "r", "cmake"]
# Compile the workspace-scale `refs_to` perf bench
# (`bench_refs_to_invocant_resolution`). Off by default so the
# regular `cargo test` doesn't carry a long-running synthetic
# workload — and so we never ship `#[ignore]`d tests as
# perpetual yellow output. Run with:
#   cargo test --release --features perf_bench bench_refs_to
perf_bench = []

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.25"
ts-parser-perl = "1.1.4"
ts-parser-pod = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
zstd = "0.13"
bitflags = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1"
ignore = "0.4"
log = "0.4"
env_logger = "0.11"
rhai = { version = "1.23", features = ["sync", "serde"] }
# Pack grammars — optional, runtime deps under their language feature.
# (Also dev-deps below so the spike tests always have them.)
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-r = { version = "1.2", optional = true }
tree-sitter-cmake = { version = "0.7", optional = true }

[dev-dependencies]
tree-sitter-python = "0.25"
tree-sitter-r = "1.2"
tree-sitter-cmake = "0.7"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.24"
